--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,11 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
+    defaultConfig {
+        vectorDrawables.useSupportLibrary = true
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -28,11 +33,11 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-
     testImplementation 'junit:junit:4.12'
     androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.1', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    implementation 'me.dm7.barcodescanner:zxing:1.9.8'
     implementation 'com.facebook.fresco:fresco:1.5.0'
     implementation 'com.jaredrummler:material-spinner:1.1.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
