--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,15 +3,16 @@
     package="com.support.robigroup.tradebook">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
+        android:fitsSystemWindows="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:fitsSystemWindows="true">
+        android:theme="@style/AppTheme">
         <activity
             android:name=".main.MainActivity"
             android:label="@string/app_name"
@@ -22,8 +23,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".tovar_list.CheckActivity" />
-        <activity android:name=".PaymentActivity"/>
+        <activity android:name=".tovar_list.ChequeActivity" />
+        <activity android:name=".payment.PaymentActivity" />
+        <activity android:name=".payment.PayActivity" />
+        <activity android:name=".payment.PaymentResult"/>
+        <activity android:name=".camera.SimpleScannerActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
     </application>
 
 </manifest>
